fixed an issue where some of the content of the about-info section was being cut off by creating height breakpoint, added side margins to headings on home page to make menu fully clickable, begun to add content

--- a/src/main.scss
+++ b/src/main.scss
@@ -50,6 +50,10 @@ html {
         a:visited {
             color: $color1;
         }
+
+        a:active {
+            color: $color3;
+        }
         
     }
 
@@ -71,6 +75,7 @@ html {
     
     #menu-label {
         float: right;
+        z-index: 99;
     }
     
     ul {
@@ -79,6 +84,7 @@ html {
     list-style-type: none;
     transition: transform 0.3s;
     transform-origin: top;
+    z-index: 99;
 
         li {
             padding: 10px 0;
@@ -116,6 +122,7 @@ html {
     justify-content: center;
     background-image: url("images/black-and-white-black-and-white-dark-908283.jpg");
     min-width: 327px;
+    z-index: 98;
 
     h1, h2, h3 {
         font-family: 'Saira Extra Condensed', sans-serif;
@@ -124,6 +131,7 @@ html {
         margin: 0;
         opacity: 0.8;
         animation: fadein 5s;
+        z-index: 98;
     }
 
     h1 {
@@ -132,6 +140,9 @@ html {
         letter-spacing: 41px;
         padding-left: 47px;
         padding-right: 2px;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     h2 {
@@ -140,6 +151,9 @@ html {
         letter-spacing: 3.9px;
         padding-left: 7px;
         padding-right: 2px;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     h3 {
@@ -147,6 +161,9 @@ html {
         letter-spacing: -0.5px;
         padding-left: 3.5px;
         padding-right: 1px;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -174,7 +191,7 @@ html {
         }
     
         display: flex;
-        height: calc(0.35 * 100vh);
+        height: calc(0.45 * 100vh);
         flex-direction: row;
         align-items: flex-end;
     
@@ -188,16 +205,21 @@ html {
 
     .info {
 
+        h3 {
+            margin: 0;
+            padding-top: 8px;
+        }
+
         p:first-child {
             margin-top: 0;
             padding-top: 8px;
         }
-        height: calc(0.65 * 100vh);
+        height: calc(0.55 * 100vh);
         font-family: 'Montserrat', sans-serif;
         padding: 0 20px;
         background-color: $color4;
         color: $color3;
-        overflow: scroll;
+        overflow-y: scroll;
     }
 
     #work-info {
@@ -222,12 +244,42 @@ html {
     }
 }
 
+#contact-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    table tr td a {
+        text-decoration: none;
+        color: $color3;
+    }
+
+    a:visited {
+        color: $color3;
+    }
+
+    a:hover {
+        color: $color1;
+    }
+
+    table {
+        tbody tr td:first-child {
+            text-align: right;
+            padding-right: 30px;
+        }
+        tbody tr td {
+            padding-bottom: 10px;
+        }
+    }
+}
+
 @media(min-width: 850px) {
 
    .page {
         display: flex;
         flex-direction: row;
-        height: 100vh;
+        // height: 100vh;
 
         .title {
             display: flex;
@@ -238,6 +290,7 @@ html {
 
             h2 {
                 padding-right: 5px;
+                font-size: 50px; 
             }
         }
 
@@ -252,18 +305,27 @@ html {
             width: 50vw;
             padding: 0;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
+
+            p {
+                padding-left: 5px;
+                // padding-right: 50px;
+            }
+        }
+
+        #about-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin: auto 0;
 
             p {
                 padding-left: 5px;
                 // padding-right: 50px;
             }
 
-            table {
+            h3 {
                 padding-left: 5px;
-                tbody tr td {
-                    width: 5%;
-                }
             }
         }
    } 
@@ -278,6 +340,10 @@ html {
             height: 100vh;
             justify-content: center;
             align-items: flex-start;
+            
+            h2 {
+                padding-left: 5px;
+            }
         }
         
        .info {
@@ -289,4 +355,10 @@ html {
         }
     }
    
+}
+
+@media(max-height: 660px) {
+    .page #about-info {
+        justify-content: flex-start;
+    }
 }
